--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kasper</title>
     <!-- Render All Elements Normaly -->
-    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="../css/all.min.css" />
+    <link rel="stylesheet" href="./css/all.min.css" />
     <!-- Main template Css -->
-    <link rel="stylesheet" href="../css/kasper.css" />
+    <link rel="stylesheet" href="./css/kasper.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
