--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <!-- Start Design -->
     <div class="design">
       <div class="image">
-        <img src="images/mobile.png" alt="Image" />
+        <img src="./images/mobile.png" alt="Image" />
       </div>
       <div class="text">
         <h2>Our design Comes With</h2>
@@ -176,7 +176,7 @@
       </div>
       <div class="imgs-container">
         <div class="box">
-          <img src="images/landing.jpg" alt="" />
+          <img src="./images/landing.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
@@ -225,7 +225,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="images/landing.jpg" alt="" />
+          <img src="./images/landing.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
@@ -239,7 +239,7 @@
     <!-- Start Video -->
     <div class="video">
       <video autoplay muted loop>
-        <source src="images/video.mp4" />
+        <source src="./images/video.mp4" />
       </video>
       <div class="text">
         <h2>Be your self Focu JUST .</h2>
@@ -260,7 +260,7 @@
             blanditiis tempora accusantium neque odio suscipit harum voluptas
           </p>
         </div>
-        <img src="images/about.png" alt="" />
+        <img src="./images/about.png" alt="" />
       </div>
     </div>
 
@@ -304,7 +304,7 @@
             Minus, nam sint
           </p>
           <div class="content">
-            <img src="/images/same.jpeg " alt="" />
+            <img src="./images/same.jpeg " alt="" />
             <div class="text">
               Lorem ipsum, dolor sit amet consecteturLorem ipsum Lorem ipsum,
               dolor sit amet consecteturLorem ipsum Lorem ipsum, dolor sit amet
@@ -313,7 +313,7 @@
             </div>
           </div>
           <div class="content">
-            <img src="/images/same.jpeg" alt="" />
+            <img src="./images/same.jpeg" alt="" />
             <div class="text">
               Lorem ipsum, dolor sit amet consecteturLorem ipsum Lorem ipsum,
               dolor sit amet consecteturLorem ipsum Lorem ipsum, dolor sit amet
@@ -528,7 +528,7 @@
     <!-- Start Footer -->
     <div class="footer">
       <div class="container">
-        <img src="images/logo2.png" alt="Logo" />
+        <img src="./images/logo2.png" alt="Logo" />
         <p>We Are Social</p>
         <div class="social-icons">
           <i class="fab fa-facebook-f"></i>
