--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
       <div class="container">
         <a href="" class="logo">
-          <img src="../images/logo2.png" alt="logo" />
+          <img src="./images/logo2.png" alt="logo" />
         </a>
         <nav>
           <ul id="links" class="links-ul">
@@ -176,21 +176,21 @@
       </div>
       <div class="imgs-container">
         <div class="box">
-          <img src="../images/landing.jpg" alt="" />
+          <img src="images/landing.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="../images/landing.jpg" alt="" />
+          <img src="images/landing.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="../images/landing.jpg" alt="" />
+          <img src="images/landing.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
