--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             Minus, nam sint
           </p>
           <div class="content">
-            <img src="../images/same.jpeg " alt="" />
+            <img src="./images/same.jpeg " alt="" />
             <div class="text">
               Lorem ipsum, dolor sit amet consecteturLorem ipsum Lorem ipsum,
               dolor sit amet consecteturLorem ipsum Lorem ipsum, dolor sit amet
