--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     </div>
     <!-- End Design -->
 
+
     <!-- Start Portfolio -->
     <div class="portfolio">
       <div class="container">
@@ -175,65 +176,235 @@
           </p>
         </div>
         <ul class="shuffle">
-          <li class="active">All</li>
-          <li>App</li>
-          <li>Photo</li>
-          <li>Web</li>
-          <li>Print</li>
+          <li class="contries active">All</li>
+          <li number="1" class="contries">OWL</li>
+          <li number="2" class="contries">PARROT</li>
+          <li number="3" class="contries">CATS</li>
+          <li number="4" class="contries">TIGER</li>
         </ul>
       </div>
       <div class="imgs-container">
-        <div class="box">
-          <img src="images/landing.jpg" alt="" />
+        <div class="box 1">
+          <img src="images/o2.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
-        <div class="box">
-          <img src="images/landing.jpg" alt="" />
+        <div class="box 1">
+          <img src="images/o3.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
-        <div class="box">
-          <img src="images/landing.jpg" alt="" />
+        <div class="box 1">
+          <img src="images/o4.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
-        <div class="box">
-          <img src="images/landing.jpg" alt="" />
+        <div class="box 1">
+          <img src="images/o5.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
-        <div class="box">
-          <img src="images/landing.jpg" alt="" />
+        <div class="box 1">
+          <img src="images/o6.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
-        <div class="box">
-          <img src="images/landing.jpg" alt="" />
+        <div class="box 1">
+          <img src="images/o7.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
-        <div class="box">
-          <img src="images/landing.jpg" alt="" />
+        <div class="box 1">
+          <img src="images/o8.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
-        <div class="box">
-          <img src="./images/landing.jpg" alt="" />
+        <div class="box 1">
+          <img src="images/owl.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 2">
+          <img src="images/p1.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 2">
+          <img src="images/p2.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 2">
+          <img src="images/p3.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 2">
+          <img src="images/p4.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 2">
+          <img src="images/p5.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 2">
+          <img src="images/p6.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 2">
+          <img src="images/p7.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 2">
+          <img src="images/p8.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+
+        <div class="box 3">
+          <img src="images/c1.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 3">
+          <img src="images/c2.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 3">
+          <img src="images/c3.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 3">
+          <img src="images/c4.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 3">
+          <img src="images/c5.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 3">
+          <img src="images/c6.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 3">
+          <img src="images/c7.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 3">
+          <img src="images/c8.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+
+        <div class="box 4">
+          <img src="images/t1.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 4">
+          <img src="images/t2.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 4">
+          <img src="images/t3.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 4">
+          <img src="images/t4.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 4">
+          <img src="images/t5.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 4">
+          <img src="images/t6.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 4">
+          <img src="images/t7.jpeg" alt="" />
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 4">
+          <img src="images/t8.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
@@ -243,6 +414,7 @@
       <a href="" class="more">More</a>
     </div>
     <!-- End Portfolio -->
+
 
     <!-- Start Video -->
     <div class="video">
