--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     />
   </head>
   <body>
-
-        <!-- Start Scrool -->
+    <!-- Start Scrool -->
 
     <div class="scrool">
       <p id="up">↑</p>
@@ -148,7 +147,7 @@
     <!-- Start Design -->
     <div class="design">
       <div class="image">
-        <img src="../images/mobile.png" alt="Image" />
+        <img src="./images/mobile.png" alt="Image" />
       </div>
       <div class="text">
         <h2>Our design Comes With</h2>
@@ -161,7 +160,6 @@
       </div>
     </div>
     <!-- End Design -->
-
 
     <!-- Start Portfolio -->
     <div class="portfolio">
@@ -185,112 +183,112 @@
       </div>
       <div class="imgs-container">
         <div class="box 1">
-          <img src="images/o2.jpeg" alt="" />
+          <img src="./images/o2.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 1">
-          <img src="images/o3.jpg" alt="" />
+          <img src="./images/o3.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 1">
-          <img src="images/o4.jpg" alt="" />
+          <img src="./images/o4.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 1">
-          <img src="images/o5.jpg" alt="" />
+          <img src="./images/o5.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 1">
-          <img src="images/o6.jpg" alt="" />
+          <img src="./images/o6.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 1">
-          <img src="images/o7.jpg" alt="" />
+          <img src="./images/o7.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 1">
-          <img src="images/o8.jpg" alt="" />
+          <img src="./images/o8.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 1">
-          <img src="images/owl.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="images/p1.jpg" alt="" />
+          <img src="./images/p1.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="images/p2.jpg" alt="" />
+          <img src="./images/p2.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="images/p3.jpg" alt="" />
+          <img src="./images/p3.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="images/p4.jpg" alt="" />
+          <img src="./images/p4.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="images/p5.jpg" alt="" />
+          <img src="./images/p5.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="images/p6.jpg" alt="" />
+          <img src="./images/p6.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="images/p7.jpeg" alt="" />
+          <img src="./images/p7.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="images/p8.jpeg" alt="" />
+          <img src="./images/p8.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
@@ -298,56 +296,56 @@
         </div>
 
         <div class="box 3">
-          <img src="images/c1.jpg" alt="" />
+          <img src="./images/c1.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="images/c2.jpg" alt="" />
+          <img src="./images/c2.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="images/c3.jpg" alt="" />
+          <img src="./images/c3.jpg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="images/c4.jpeg" alt="" />
+          <img src="./images/c4.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="images/c5.jpeg" alt="" />
+          <img src="./images/c5.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="images/c6.jpeg" alt="" />
+          <img src="./images/c6.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="images/c7.jpeg" alt="" />
+          <img src="./images/c7.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="images/c8.jpeg" alt="" />
+          <img src="./images/c8.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
@@ -355,56 +353,56 @@
         </div>
 
         <div class="box 4">
-          <img src="images/t1.jpeg" alt="" />
+          <img src="./images/t1.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="images/t2.jpeg" alt="" />
+          <img src="./images/t2.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="images/t3.jpeg" alt="" />
+          <img src="./images/t3.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="images/t4.jpeg" alt="" />
+          <img src="./images/t4.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="images/t5.jpeg" alt="" />
+          <img src="./images/t5.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="images/t6.jpeg" alt="" />
+          <img src="./images/t6.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="images/t7.jpeg" alt="" />
+          <img src="./images/t7.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="images/t8.jpeg" alt="" />
+          <img src="./images/t8.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
@@ -415,11 +413,10 @@
     </div>
     <!-- End Portfolio -->
 
-
     <!-- Start Video -->
     <div class="video">
       <video autoplay muted loop>
-        <source src="../images/video.mp4" />
+        <source src="./images/video.mp4" />
       </video>
       <div class="text">
         <h2>Be your self Focu JUST .</h2>
@@ -440,7 +437,7 @@
             blanditiis tempora accusantium neque odio suscipit harum voluptas
           </p>
         </div>
-        <img src="../images/about.png" alt="" />
+        <img src="./images/about.png" alt="" />
       </div>
     </div>
 
@@ -484,7 +481,7 @@
             Minus, nam sint
           </p>
           <div class="content">
-            <img src="./images/same.jpeg " alt="" />
+            <img src="./images/p1.jpg " alt="" />
             <div class="text">
               Lorem ipsum, dolor sit amet consecteturLorem ipsum Lorem ipsum,
               dolor sit amet consecteturLorem ipsum Lorem ipsum, dolor sit amet
@@ -493,7 +490,7 @@
             </div>
           </div>
           <div class="content">
-            <img src="./images/same.jpeg" alt="" />
+            <img src="./images/p2.jpg" alt="" />
             <div class="text">
               Lorem ipsum, dolor sit amet consecteturLorem ipsum Lorem ipsum,
               dolor sit amet consecteturLorem ipsum Lorem ipsum, dolor sit amet
@@ -722,6 +719,11 @@
       </div>
     </div>
     <!-- End Footer -->
+    <p id="ali">Ali</p>
+    <p id="ali">Ali</p>
+    <p id="ali">Ali</p>
+    <p id="ali">Ali</p>
+    <p id="ali">Ali</p>
 
     <!-- Script File -->
     <script src="main.js"></script>
