--- a/index.html
+++ b/index.html
@@ -183,49 +183,7 @@
       </div>
       <div class="imgs-container">
         <div class="box 1">
-          <img src="./images/o2.jpeg" alt="" />
-          <div class="caption">
-            <h4>Awesome image</h4>
-            <p>Photography</p>
-          </div>
-        </div>
-        <div class="box 1">
-          <img src="./images/o3.jpg" alt="" />
-          <div class="caption">
-            <h4>Awesome image</h4>
-            <p>Photography</p>
-          </div>
-        </div>
-        <div class="box 1">
-          <img src="./images/o4.jpg" alt="" />
-          <div class="caption">
-            <h4>Awesome image</h4>
-            <p>Photography</p>
-          </div>
-        </div>
-        <div class="box 1">
-          <img src="./images/o5.jpg" alt="" />
-          <div class="caption">
-            <h4>Awesome image</h4>
-            <p>Photography</p>
-          </div>
-        </div>
-        <div class="box 1">
-          <img src="./images/o6.jpg" alt="" />
-          <div class="caption">
-            <h4>Awesome image</h4>
-            <p>Photography</p>
-          </div>
-        </div>
-        <div class="box 1">
-          <img src="./images/o7.jpg" alt="" />
-          <div class="caption">
-            <h4>Awesome image</h4>
-            <p>Photography</p>
-          </div>
-        </div>
-        <div class="box 1">
-          <img src="./images/o8.jpg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
@@ -233,62 +191,119 @@
         </div>
         <div class="box 1">
           <img src="./images/owl.jpeg" alt="" />
+
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 1">
+          <img src="./images/owl.jpeg" alt="" />
+
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 1">
+          <img src="./images/owl.jpeg" alt="" />
+
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 1">
+          <img src="./images/owl.jpeg" alt="" />
+
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 1">
+          <img src="./images/owl.jpeg" alt="" />
+
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 1">
+          <img src="./images/owl.jpeg" alt="" />
+
+          <div class="caption">
+            <h4>Awesome image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <div class="box 1">
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="./images/p1.jpg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="./images/p2.jpg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="./images/p3.jpg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="./images/p4.jpg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="./images/p5.jpg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="./images/p6.jpg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="./images/p7.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 2">
-          <img src="./images/p8.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
@@ -296,56 +311,61 @@
         </div>
 
         <div class="box 3">
-          <img src="./images/c1.jpg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="./images/c2.jpg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="./images/c3.jpg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="./images/c4.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="./images/c5.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
+
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="./images/c6.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="./images/c7.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 3">
-          <img src="./images/c8.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
@@ -353,56 +373,56 @@
         </div>
 
         <div class="box 4">
-          <img src="./images/t1.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="./images/t2.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="./images/t3.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="./images/t4.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="./images/t5.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="./images/t6.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="./images/t7.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box 4">
-          <img src="./images/t8.jpeg" alt="" />
+          <img src="./images/owl.jpeg" alt="" />
           <div class="caption">
             <h4>Awesome image</h4>
             <p>Photography</p>
@@ -719,6 +739,11 @@
       </div>
     </div>
     <!-- End Footer -->
+    <p id="ali">Ali</p>
+    <p id="ali">Ali</p>
+    <p id="ali">Ali</p>
+    <p id="ali">Ali</p>
+    <p id="ali">Ali</p>
 
     <!-- Script File -->
     <script src="main.js"></script>
